# open_world

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  GAME.md  IMPLEMENTATION.md  PROJECT.md  README.md  TESTING.md  package.json  playwright.config.ts
.github/workflows/: e2e-tests.yml  test.yml
e2e/: auth.spec.ts  exploration.spec.ts  items-and-actions.spec.ts
scripts/: test.sh
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: logging.rs  mod.rs  rate_limiting.rs  validation.rs
src/models/: mod.rs
src/services/: area_generation.rs  item_management.rs  mod.rs  player_actions.rs  puzzle_solving.rs
tests/: action_integration_tests.rs  area_integration_tests.rs  auth_integration_tests.rs  item_integration_tests.rs
