[package]
name = "open_world"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID & Time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Configuration
dotenv = "0.15"
config = "0.13"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
lazy_static = "1.4"
regex = "1.10"

# Rate limiting
governor = "0.10"

# HTTP client for tests
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[[bin]]
name = "seed_initial_world"
path = "src/bin/seed_initial_world.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
